--- a/index.html
+++ b/index.html
@@ -4,12 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Calculator Project</title>
+    
+    <title>Calculator</title>
+    
     <link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
-    <div class="calc-body">
-
+    <div class="calculator">
+        <div class="calc-body">
+        <div class="display">
+            <div data-operation class="operations"></div>
+            <div data-result class="answers"></div>
+        </div>
+        <button data-all-clear class="span-two ac">AC</button>
+        <button data-delete class="del">DEL</button>
+        <button data-operator class="signs">÷</button>
+        <button data-number>1</button>
+        <button data-number>2</button>
+        <button data-number>3</button>
+        <button data-operator class="signs">*</button>
+        <button data-number>4</button>
+        <button data-number>5</button>
+        <button data-number>6</button>
+        <button data-operator class="signs">+</button>
+        <button data-number>7</button>
+        <button data-number>8</button>
+        <button data-number>9</button>
+        <button data-operator class="signs">-</button>
+        <button data-number class="signs">.</button>
+        <button data-number>0</button>
+        <button data-equals class="span-two signs">=</button>
     </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
